# my-fastapi-template

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  config.yaml.example  docker-compose.yml  main.py  pyproject.toml  requirements.txt
alembic/: env.py
src/: main.py
src/api/: __init__.py
src/api/v1/: __init__.py  hysteria.py  status.py
src/core/: config.py  logger_setup.py
src/core/dependencies/: __init__.py  container.py  infrastructure.py
src/core/models/: base.py  db_helper.py
src/dependencies/: __init__.py
src/schemas/: hysteria.py
src/services/: hysteria.py
tests/: conftest.py
