[project]
name = "fastapi-habbits"
version = "0.1.0"
description = ""
authors = [
    {name = "therueryan",email = "georgytoper@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "sqlalchemy[asyncio] (>=2.0.44,<3.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "alembic (>=1.17.1,<2.0.0)",
    "fastapi[standard] (>=0.121.2,<0.122.0)",
    "orjson (>=3.11.4,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
