[project]
name = "hysteria-api"
version = "0.1.0"
description = "API for managing Hysteria 2 configs"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic-settings>=2.6.1",
    "fastapi[standard]>=0.115.0",
    "orjson>=3.9.14",
    "ruamel.yaml>=0.18.6",
    "docker>=7.1.0",
]

[tool.uv]
package = false
dev-dependencies = [
    "ruff>=0.3.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.5",
    "httpx>=0.27.0"
]

[tool.pytest.ini_options]
pythonpath = "."
asyncio_mode = "auto"
